bad/if_else_context_03.example_compiler_output
ERROR
[1mbad/if_else_context_03.lat:9:2: [1;31merror: [0;1muse of undeclared variable `y`[m
	y;
	[1;32m^[m
